refactor: SonarCloud 이슈 수정 (Math.clamp, Stream.toList, record 전환, 파라미터 감소)